--- a/OrderProcessing/OrderProcessing.csproj
+++ b/OrderProcessing/OrderProcessing.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrderService\OrderService.csproj" />
+  </ItemGroup>
+
 </Project>
