--- a/OrderService/OrderService.csproj
+++ b/OrderService/OrderService.csproj
@@ -28,4 +28,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UserService\UserService.csproj" />
+  </ItemGroup>
+
 </Project>
